# OpencvQRCode

./: CMakeLists.txt  QRCode_Locate.cpp  QR_test_q.cpp  main.cpp  main_test.cpp  road_line.cpp
